--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>struts2-parent</artifactId>
-    <version>2.5.29</version>
+    <version>2.5.30</version>
     <packaging>pom</packaging>
     <name>Struts 2</name>
     <url>http://struts.apache.org/</url>
@@ -51,7 +51,7 @@
         <connection>scm:git:https://gitbox.apache.org/repos/asf/struts.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/struts.git</developerConnection>
         <url>https://github.com/apache/struts/</url>
-        <tag>STRUTS_2_5_29</tag>
+        <tag>STRUTS_2_5_30</tag>
     </scm>
 
     <issueManagement>
@@ -96,7 +96,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.build.outputTimestamp>2022-01-13T07:44:47Z</project.build.outputTimestamp>
+        <project.build.outputTimestamp>2022-03-15T13:49:51Z</project.build.outputTimestamp>
 
         <!-- Dependencies -->
         <ognl.version>3.1.29</ognl.version>
@@ -105,7 +105,8 @@
         <tiles.version>3.0.8</tiles.version>
         <tiles-request.version>1.0.7</tiles-request.version>
         <log4j2.version>2.12.4</log4j2.version>
-        <jackson.version>2.10.3</jackson.version>
+        <jackson.version>2.10.5</jackson.version>
+        <jackson-databind.version>2.10.5.1</jackson-databind.version>
 
         <!-- Site generation -->
         <fluido-skin.version>1.8</fluido-skin.version>
@@ -618,7 +619,7 @@
             <dependency>
                 <groupId>org.freemarker</groupId>
                 <artifactId>freemarker</artifactId>
-                <version>2.3.30</version>
+                <version>2.3.31</version>
             </dependency>
 
             <dependency>
@@ -1082,7 +1083,7 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>${jackson.version}</version>
+                <version>${jackson-databind.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.dataformat</groupId>
